# Oryn

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build.rs
gui/: Cargo.toml
gui/ui/: app-window.slint
oryn-rs/: Cargo.toml
oryn-rs/src/: lib.rs
src/: main.rs
src/markdown/: blockquote.rs  bold.rs  code.rs  code_block.rs  heading.rs  italic.rs  link.rs  list.rs  math.rs  mermaid.rs  mod.rs  paragraph.rs  rule.rs  spacer.rs  table.rs
src/titlebar/: mod.rs
src/workspace/: mod.rs
ui/: app-window.slint
ui/left-sidebar/: left-sidebar.slint
ui/main-content/: main-content.slint  test-document.md
ui/markdown/: blockquote.slint  bold.slint  code.slint  code_block.slint  heading.slint  italic.slint  link.slint  list.slint  markdown.slint  math.slint  mermaid.slint  paragraph.slint  rule.slint  spacer.slint  table.slint  types.slint
ui/shared/: tokens.slint
ui/titlebar/: titlebar.slint
