[package]
name = "oryn-gui"
description = "Oryn graphical UI frontend (Slint-based)"
version = "0.1.0"
authors = ["Luka Gray <heylukagray@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/lukagray-dev/oryn"
edition = "2021"

[dependencies]
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"
