[package]
name = "oryn-gui"
description = "Oryn graphical UI frontend (Slint-based)"
version = "0.1.0"
authors = ["Luka Gray <heylukagray@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/lukagray-dev/oryn"
edition = "2021"

[dependencies]
slint = { version = "1.17.0", features = ["unstable-winit-030", "renderer-skia", "unstable-fontique-010"] }
rfd = "0.15"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
pulldown-cmark = "0.11"
regex = "1.10"
syntect = "5.2"

[build-dependencies]
slint-build = "1.17.0"
