[package]
name        = "oryn-rs"
description = "Oryn core — markdown document model, parsing, and serialization. Shared backend for desktop and mobile frontends."
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true

[dev-dependencies]
serde_json = { workspace = true }
